# emlo4-session-04-eternapravin

./: .gitignore  Dockerfile  README.md  dogbreed_classifier.py  dogbreed_modules.py  eval.py  infer.py  pyproject.toml  split.py  train.py
src/: eval.py  infer.py  train.py
src/datamodules/: dogbreed_modules.py
src/models/: dogbreed_classifier.py
src/utils/: logging_utils.py
